# HomeworkandProject

./: README.md
大三上/机器学习/仿真实验2/代码/: t-SNE.py
大三上/机器学习/作业2/: 仿真实验题.docx
大三上/机器学习/作业2/代码/: lab1.py  lab2.py
大三上/机器学习/作业5/: 作业-机器学习5.docx
大三上/机器学习/大作业/Code/: README.md  SVM.py  SVM_PCA_100.py  best_neural_network.py  data_analysis.py  logistic_regression.py  neural_network.py  requirements.txt
大三上/自然语言处理/: HW1_{522031910557}_{冯海桐}.ipynb  HW2_{522031910557}_{冯海桐}.ipynb
大三上/自然语言处理/第一次大作业/: README.md  finetune-eval.ipynb  loss.xlsx
大三上/自然语言处理/第二次大作业/: README.md  chatbot.ipynb  loss_0.5B.xlsx  loss_1.5B.xlsx  train_0.5B.ipynb  train_1.5B.ipynb  测评对比_0.5B.xlsx
大三上/计算机图形学/光线追踪大作业/: README.md
大三上/计算机图形学/光线追踪大作业/GPU加速/: CMakeLists.txt  main.cpp
大三上/计算机图形学/光线追踪大作业/GPU加速/lib/: hdrloader.cpp
大三上/计算机图形学/光线追踪大作业/GPU加速/shaders/: fshader.fsh
大三上/计算机图形学/光线追踪大作业/基本光线追踪/: CMakeLists.txt  aabb.h  bvh.h  camera.h  color.h  glad.c  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  material.h  mesh.h  onb.h  pdf.h  perlin.h  quad.h  sphere.h  texture.h  vec3.h
大三上/计算机图形学/光线追踪大作业/基本光线追踪效果图/: basic.ppm  chaos_balls.ppm  cornell_box.ppm
大三上/计算机网络/大作业/午睡无忧1.0.0/: manifest.json  popup.html
大三上/计算机网络/大作业/午睡无忧1.0.0/css/: popup.css  public.css
大三上/计算机网络/大作业/午睡无忧1.0.0/js/: background.js  function.js  init.js  popup.js
大三上/计算机网络/大作业/猫抓2.5.6_0/: download.html  json.html  m3u8.html  manifest.json  mpd.html  popup.html  privacy.html
大三上/计算机网络/大作业/猫抓2.5.6_0/catch-script/: catch.js  i18n.js  recorder.js  recorder2.js  search.js  webrtc.js
(+23 files in other folders)
